--- a/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/beccammyers.github.io/styles/nav.css">
     <link rel="stylesheet" href="/beccammyers.github.io/styles/footer.css">
     <link rel="stylesheet" href="/beccammyers.github.io/styles/header.css">
-    <link rel="stylesheet" href="/beccammyers.github.io/styles/preparation.css">
+    <link rel="stylesheet" href="/beccammyers.github.io/styles/health.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
     <title>Becca Maisey | Health and Safety</title>
 </head>
@@ -94,7 +94,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <embed src="./files/Resource%20Plan.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Resource%20Plan.pdf"></iframe>
             </div>
 
             <div class="grid-item">
