--- a/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/beccammyers.github.io/styles/nav.css">
     <link rel="stylesheet" href="/beccammyers.github.io/styles/footer.css">
     <link rel="stylesheet" href="/beccammyers.github.io/styles/header.css">
-    <link rel="stylesheet" href="/beccammyers.github.io/styles/preparation.css">
+    <link rel="stylesheet" href="/beccammyers.github.io/styles/instruction.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
     <title>Becca Maisey | Instruction</title>
 </head>
@@ -30,7 +30,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <embed src="./files/Preschool%20Lesson%20Plan%2011.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Preschool%20Lesson%20Plan%2011.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -43,7 +43,7 @@
             </div>
 
             <div class="grid-item">
-                    <embed src="./files/Toddler%20Strategy%20Sheet.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Toddler%20Strategy%20Sheet.pdf"></iframe>
             </div>
         </div>
 
@@ -53,7 +53,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <embed src="./files/Lesson%20Plan%20-%203%20Math%20Intervention%20(subtracting%202%20digits%20from%203%20digits).pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Lesson%20Plan%20-%203%20Math%20Intervention%20(subtracting%202%20digits%20from%203%20digits).pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -66,7 +66,7 @@
             </div>
 
             <div class="grid-item">
-                    <embed src="./files/TPT%20Project.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/TPT%20Project.pdf"></iframe>
             </div>
         </div>
 
@@ -89,7 +89,7 @@
             </div>
 
             <div class="grid-item">
-                    <embed src="./files/Lesson Plan 16 Be verbs.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Lesson Plan 16 Be verbs.pdf"></iframe>
             </div>
         </div>
 
@@ -99,7 +99,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <embed src="./files/Preschool%20Lesson%20Pre-Assessment.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Preschool%20Lesson%20Pre-Assessment.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -123,7 +123,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <embed src="./files/Lesson%20Plan%2017%20-%20How%20to%20Collect%20and%20Graph%20Data.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Lesson%20Plan%2017%20-%20How%20to%20Collect%20and%20Graph%20Data.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -136,7 +136,7 @@
             </div>
 
             <div class="grid-item">
-                    <embed src="./files/Preschool%20Dogs%20Large%20Group.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Preschool%20Dogs%20Large%20Group.pdf"></iframe>
             </div>
         </div>
 
