--- a/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
@@ -1,5 +1,5 @@
 <!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
-<embed src="./files/" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+<iframe src="./files/"></iframe>
 -->
 
 
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/beccammyers.github.io/styles/nav.css">
     <link rel="stylesheet" href="/beccammyers.github.io/styles/footer.css">
     <link rel="stylesheet" href="/beccammyers.github.io/styles/header.css">
-    <link rel="stylesheet" href="/beccammyers.github.io/styles/preparation.css">
+    <link rel="stylesheet" href="/beccammyers.github.io/styles/responsibilities.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
     <title>Becca Maisey | Professional Responsibilities</title>
 </head>
@@ -41,7 +41,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <embed src="./files/Week%209%20Reflection.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Week%209%20Reflection.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -64,7 +64,7 @@
             </div>
 
             <div class="grid-item">
-                    <embed src="./files/Journal%206.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Journal%206.pdf"></iframe>
             </div>
         </div>
 
@@ -105,7 +105,7 @@
             </div>
 
             <div class="grid-item">
-                    <embed src="./files/Toddler%20Notes%20Week%207.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Toddler%20Notes%20Week%207.pdf"></iframe>
             </div>
         </div>
 
@@ -144,7 +144,7 @@
             </div>
 
             <div class="grid-item">
-                    <embed src="./files/Parent%20Handout%20Lesson%201.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Parent%20Handout%20Lesson%201.pdf"></iframe>
             </div>
         </div>
 
@@ -164,7 +164,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <embed src="./files/Tomlison%20Chapter%204.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Tomlison%20Chapter%204.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -189,7 +189,7 @@
             </div>
 
             <div class="grid-item">
-                    <embed src="./files/Final%20Positive%20Comments.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Final%20Positive%20Comments.pdf"></iframe>
             </div>
         </div>
 
@@ -202,7 +202,7 @@
                 to engage students in learning; thus, growth in content, pedagogy, and information technology are
                 essential to good teaching. Networking with colleagues through such activities as joint planning, study
                 groups, and lesson study provides opportunities for teachers to learn from one another. These activities
-                allow for job-embedded professional development. In addition, professional educators increase their
+                allow for job-iframeded professional development. In addition, professional educators increase their
                 effectiveness in the classroom by belonging to professional organizations, reading professional
                 journals, attending educational conferences, and taking university classes. As they gain experience and
                 expertise, educators find ways to contribute to their colleagues and to the profession.</p>
@@ -275,7 +275,7 @@
             </div>
 
             <div class="grid-item">
-                    <embed src="./files/Becca%20Maisey%20Third%20Toddler%20Lead%20Implementation%20Rubric.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <iframe src="./files/Becca%20Maisey%20Third%20Toddler%20Lead%20Implementation%20Rubric.pdf"></iframe>
             </div>
         </div>
 
