--- a/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
@@ -37,7 +37,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <embed src="./files/DAP%20Principles%20Paper.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/DAP%20Principles%20Paper.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -57,7 +57,7 @@
             </div>
 
             <div class="grid-item">
-                <embed src="./files/Lesson%203%20Part%20One.pdf" alt="pdf"
+                <iframe src="./files/Lesson%203%20Part%20One.pdf" alt="pdf"
                     pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
             <!--             Toddler Lesson plan #3 Spring 2018 -->
@@ -77,7 +77,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <embed src="./files/Student%20Interests.pdf" alt="pdf"
+                <iframe src="./files/Student%20Interests.pdf" alt="pdf"
                     pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
@@ -99,7 +99,7 @@
             </div>
 
             <div class="grid-item">
-                <embed src="./files/Lesson%202%20Part%20Two.pdf" alt="pdf"
+                <iframe src="./files/Lesson%202%20Part%20Two.pdf" alt="pdf"
                     pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
@@ -121,7 +121,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <embed src="./files/Lesson%20Plan%209%20Mixed%20Word%20Problems.pdf" alt="pdf"
+                <iframe src="./files/Lesson%20Plan%209%20Mixed%20Word%20Problems.pdf" alt="pdf"
                     pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
@@ -143,7 +143,7 @@
             </div>
 
             <div class="grid-item">
-                <embed src="./files/Lesson%20Plan%201%20-%20Counting%20by%207's.pdf" alt="pdf"
+                <iframe src="./files/Lesson%20Plan%201%20-%20Counting%20by%207's.pdf" alt="pdf"
                     pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
@@ -166,7 +166,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <embed src="./files/Lesson%201%20Part%20One.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/Lesson%201%20Part%20One.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -187,7 +187,7 @@
             </div>
 
             <div class="grid-item">
-                <embed src="./files/Lesson%20Plan%206%20Shades%20of%20Meaning.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/Lesson%20Plan%206%20Shades%20of%20Meaning.pdf"></iframe>
             </div>
 
         </div>
@@ -210,7 +210,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <embed src="./files/Unit%20Lesson%20Plan%201.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/Unit%20Lesson%20Plan%201.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -233,7 +233,7 @@
             </div>
 
             <div class="grid-item">
-                <embed src="./files/CHILD%20230%20Lesson%20Plan.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/CHILD%20230%20Lesson%20Plan.pdf"></iframe>
             </div>
 
         </div>
@@ -279,7 +279,7 @@
             </div>
 
             <div class="grid-item">
-                <embed src="./files/Unit%20Pre-Assessment%20Report.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/Unit%20Pre-Assessment%20Report.pdf"></iframe>
             </div>
 
         </div>
