--- a/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
@@ -37,7 +37,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <iframe src="./files/DAP%20Principles%20Paper.pdf"></iframe>
+                <iframe src="./files/DAP%20Principles%20Paper.pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"></iframe>
             </div>
 
             <div class="grid-item">
@@ -166,7 +166,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <iframe src="./files/Lesson%201%20Part%20One.pdf"></iframe>
+                <iframe src="./files/Lesson%201%20Part%20One.pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"></iframe>
             </div>
 
             <div class="grid-item">
@@ -187,7 +187,7 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/Lesson%20Plan%206%20Shades%20of%20Meaning.pdf"></iframe>
+                <iframe src="./files/Lesson%20Plan%206%20Shades%20of%20Meaning.pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"></iframe>
             </div>
 
         </div>
@@ -210,7 +210,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <iframe src="./files/Unit%20Lesson%20Plan%201.pdf"></iframe>
+                <iframe src="./files/Unit%20Lesson%20Plan%201.pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"></iframe>
             </div>
 
             <div class="grid-item">
@@ -233,7 +233,7 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/CHILD%20230%20Lesson%20Plan.pdf"></iframe>
+                <iframe src="./files/CHILD%20230%20Lesson%20Plan.pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"></iframe>
             </div>
 
         </div>
@@ -279,7 +279,7 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/Unit%20Pre-Assessment%20Report.pdf"></iframe>
+                <iframe src="./files/Unit%20Pre-Assessment%20Report.pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"></iframe>
             </div>
 
         </div>
