--- a/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
@@ -30,7 +30,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <iframe src="./files/Preschool%20Lesson%20Plan%2011.pdf"></iframe>
+                    <object><iframe src="./files/Preschool%20Lesson%20Plan%2011.pdf"></iframe></object>
             </div>
 
             <div class="grid-item">
@@ -43,7 +43,7 @@
             </div>
 
             <div class="grid-item">
-                    <iframe src="./files/Toddler%20Strategy%20Sheet.pdf"></iframe>
+                    <object><iframe src="./files/Toddler%20Strategy%20Sheet.pdf"></iframe></object>
             </div>
         </div>
 
@@ -53,7 +53,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <iframe src="./files/Lesson%20Plan%20-%203%20Math%20Intervention%20(subtracting%202%20digits%20from%203%20digits).pdf"></iframe>
+                    <object><iframe src="./files/Lesson%20Plan%20-%203%20Math%20Intervention%20(subtracting%202%20digits%20from%203%20digits).pdf"></iframe></object>
             </div>
 
             <div class="grid-item">
@@ -66,7 +66,7 @@
             </div>
 
             <div class="grid-item">
-                    <iframe src="./files/TPT%20Project.pdf"></iframe>
+                    <object><iframe src="./files/TPT%20Project.pdf"></iframe></object>
             </div>
         </div>
 
@@ -89,7 +89,7 @@
             </div>
 
             <div class="grid-item">
-                    <iframe src="./files/Lesson Plan 16 Be verbs.pdf"></iframe>
+                    <object><iframe src="./files/Lesson Plan 16 Be verbs.pdf"></iframe></object>
             </div>
         </div>
 
@@ -99,7 +99,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <iframe src="./files/Preschool%20Lesson%20Pre-Assessment.pdf"></iframe>
+                    <object><iframe src="./files/Preschool%20Lesson%20Pre-Assessment.pdf"></iframe></object>
             </div>
 
             <div class="grid-item">
@@ -123,7 +123,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <iframe src="./files/Lesson%20Plan%2017%20-%20How%20to%20Collect%20and%20Graph%20Data.pdf"></iframe>
+                    <object><iframe src="./files/Lesson%20Plan%2017%20-%20How%20to%20Collect%20and%20Graph%20Data.pdf"></iframe></object>
             </div>
 
             <div class="grid-item">
@@ -136,7 +136,7 @@
             </div>
 
             <div class="grid-item">
-                    <iframe src="./files/Preschool%20Dogs%20Large%20Group.pdf"></iframe>
+                    <object><iframe src="./files/Preschool%20Dogs%20Large%20Group.pdf"></iframe></object>
             </div>
         </div>
 
