--- a/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
@@ -1,5 +1,5 @@
 <!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
-<object><iframe src="./files/"></iframe></object>
+<iframe src="./files/"></iframe>
 -->
 
 
@@ -41,7 +41,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <object><iframe src="./files/Week%209%20Reflection.pdf"></iframe></object>
+                    <iframe src="./files/Week%209%20Reflection.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -64,7 +64,7 @@
             </div>
 
             <div class="grid-item">
-                    <object><iframe src="./files/Journal%206.pdf"></iframe></object>
+                    <iframe src="./files/Journal%206.pdf"></iframe>
             </div>
         </div>
 
@@ -105,7 +105,7 @@
             </div>
 
             <div class="grid-item">
-                    <object><iframe src="./files/Toddler%20Notes%20Week%207.pdf"></iframe></object>
+                    <iframe src="./files/Toddler%20Notes%20Week%207.pdf"></iframe>
             </div>
         </div>
 
@@ -144,7 +144,7 @@
             </div>
 
             <div class="grid-item">
-                    <object><iframe src="./files/Parent%20Handout%20Lesson%201.pdf"></iframe></object>
+                    <iframe src="./files/Parent%20Handout%20Lesson%201.pdf"></iframe>
             </div>
         </div>
 
@@ -164,7 +164,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <object><iframe src="./files/Tomlison%20Chapter%204.pdf"></iframe></object>
+                    <iframe src="./files/Tomlison%20Chapter%204.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -189,7 +189,7 @@
             </div>
 
             <div class="grid-item">
-                    <object><iframe src="./files/Final%20Positive%20Comments.pdf"></iframe></object>
+                    <iframe src="./files/Final%20Positive%20Comments.pdf"></iframe>
             </div>
         </div>
 
@@ -275,7 +275,7 @@
             </div>
 
             <div class="grid-item">
-                    <object><iframe src="./files/Becca%20Maisey%20Third%20Toddler%20Lead%20Implementation%20Rubric.pdf"></iframe></object>
+                    <iframe src="./files/Becca%20Maisey%20Third%20Toddler%20Lead%20Implementation%20Rubric.pdf"></iframe>
             </div>
         </div>
 
