--- a/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
@@ -1,5 +1,5 @@
 <!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
-                <object><object><iframe src=""></iframe></object>
+                <iframe src=""></iframe>
 -->
 <!DOCTYPE html>
 <html lang="en-us">
@@ -58,7 +58,7 @@
             </div>
 
             <div class="grid-item">
-                    <object><object><iframe src="./files/STET%20Chapter%204%20Handout.pdf"></iframe></object>
+                    <iframe src="./files/STET%20Chapter%204%20Handout.pdf"></iframe>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <object><object><iframe src="./files/Preschool%20Lesson%20Plan%2017.pdf"></iframe></object>
+                    <iframe src="./files/Preschool%20Lesson%20Plan%2017.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -108,7 +108,7 @@
         <div class="grid-container">
 
             <div class="grid-item">
-                    <object><object><iframe src="./files/Professional%20Growth%20Goal%201.pdf"></iframe></object>
+                    <iframe src="./files/Professional%20Growth%20Goal%201.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -134,8 +134,8 @@
             </div>
 
             <div class="grid-item">
-                    <object><object><iframe src="./files/Becca%20Maisey%20Second%20Toddler%20Lead%20Implementation%20Rubric.pdf"></iframe></object>
-                    <object><object><iframe src="./files/Becca%20Maisey%20Third%20Toddler%20Lead%20Implementation%20Rubric.pdf"></iframe></object>
+                    <iframe src="./files/Becca%20Maisey%20Second%20Toddler%20Lead%20Implementation%20Rubric.pdf"></iframe>
+                    <iframe src="./files/Becca%20Maisey%20Third%20Toddler%20Lead%20Implementation%20Rubric.pdf"></iframe>
             </div>
         </div>
 
@@ -178,7 +178,7 @@
             </div>
 
             <div class="grid-item">
-                    <object><object><iframe src="./files/Wong%206-10.pdf"></iframe></object>
+                    <iframe src="./files/Wong%206-10.pdf"></iframe>
             </div>
         </div>
 
@@ -214,7 +214,7 @@
             </div>
 
             <div class="grid-item">
-                    <object><object><iframe src="./files/Environment%20Observation%20Form%20One%20Fill-in.pdf"></iframe></object>
+                    <iframe src="./files/Environment%20Observation%20Form%20One%20Fill-in.pdf"></iframe>
             </div>
         </div>
 
