--- a/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
@@ -94,7 +94,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <object><iframe src="./files/Resource%20Plan.pdf"></iframe></object>
+                    <iframe src="./files/Resource%20Plan.pdf"></iframe>
             </div>
 
             <div class="grid-item">
