--- a/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
@@ -35,7 +35,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item images">
-                    <img src="" alt="Emotions">
+                    <img src="./images/Emotions.jpg" alt="Emotions" style="transform: rotate(90deg); overflow-y:visible; transform-origin: center; width: 75vh; height: 35vw;">
             </div>
 
             <div class="grid-item">
