--- a/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
@@ -30,6 +30,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
+                    <iframe src="./files/Child%20Record%20Summary%20Template.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -51,7 +52,8 @@
             <p class="about"></p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="./images/Student%20Handbook.png" alt="Student Handbook" style="border: 2px solid black;">
             </div>
 
             <div class="grid-item">
@@ -129,7 +131,8 @@
                 <p><strong>Document Description: </strong></p>
             </div>
 
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="./images/Snack%20Schedule.jpg" alt="Snack Schedule">
             </div>
         </div>
 
@@ -159,7 +162,8 @@
             <p class="about"></p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="./images/Fire%20Alarm.jpg" alt="Fire Alarm">
             </div>
 
             <div class="grid-item">
@@ -171,7 +175,8 @@
                 <p><strong>Document Description: </strong></p>
             </div>
 
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="./images/Stewards%20of%20Children.jpg" alt="Stewards Of Children" style="transform: rotate(90deg); overflow-y:visible; transform-origin: center; width: 75vh; height: 35vw;">
             </div>
         </div>
 
@@ -179,8 +184,9 @@
             <h2 class="about">5h. Infectious/Communicable Disease</h2>
             <p class="about"></p>
         </div>
-        <div class="grid-container">
-            <div class="grid-item">
+        <div class="grid-container">            
+            <div class="grid-item images">
+                <img src="./images/Snack%20Aprons.jpg" alt="Snack Aprons">
             </div>
 
             <div class="grid-item">
